--- a/map/css/map.css
+++ b/map/css/map.css
@@ -54,6 +54,8 @@ html, body {
   height: 150px;
   object-fit: cover;
   margin: 0;
+  border-width: 0px;
+  padding: 1px 0px 2px 0px;
 }
 .leaflet-popup-content td {
   padding: 1px 2px 0px 2px;
