--- a/map/css/map.css
+++ b/map/css/map.css
@@ -60,3 +60,7 @@ html, body {
 .leaflet-popup-content td {
   padding: 1px 2px 0px 2px;
 }
+.beautify-marker.marker {
+  writing-mode: vertical-rl;
+  white-space: nowrap;
+}
